--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,11 +1,10 @@
-@import url('https://fonts.cdnfonts.com/css/cocogoose');
+@import url("https://fonts.cdnfonts.com/css/cocogoose");
 
 * {
     margin: 0px;
     padding: 0px;
     font-family: COCOGOOSE, sans-serif;
     box-sizing: border-box;
-
 }
 
 body {
@@ -17,7 +16,7 @@ body {
 }
 
 .logo-loket {
-    border: 1px solid #6F1AB6;
+    border: 1px solid #6f1ab6;
     border-radius: 10px;
 }
 
@@ -37,7 +36,7 @@ body {
 
 .card-radius {
     border-radius: 30px;
-    background-color: #6F1AB6;
+    background-color: #6f1ab6;
     align-content: center;
 }
 
@@ -52,7 +51,6 @@ label {
 
 .button-input {
     text-align: center;
-
 }
 
 .btn {
@@ -60,8 +58,256 @@ label {
     border-radius: 30px;
 }
 
-/* .img-tree {
+.container-besar {
+    width: 1500px;
+    height: 700px;
+    overflow: hidden;
+}
+
+.loket {
+    margin-top: 6rem;
+}
+
+.background-1 img {
+    width: 85%;
+    height: 85%;
     position: absolute;
-    height: fit-content;
-    width: fit-content;
-} */
+    z-index: -20;
+    bottom: 0;
+}
+
+.background-2 img {
+    width: 25rem;
+    position: absolute;
+    bottom: 3rem;
+    right: 3rem;
+    z-index: -19;
+}
+
+.loket .loket-base {
+    width: 28rem;
+    height: 20rem;
+    border-radius: 5rem;
+    display: inline-block;
+}
+
+.loket .loket-base .loket-kiri {
+    width: 100%;
+    height: 100%;
+    border-radius: 5rem;
+    background-color: #7e007e;
+    box-shadow: -10px 10px 0 #ff8201;
+    position: relative;
+}
+
+.loket .loket-base .loket-kiri::after {
+    content: "";
+    width: 28rem;
+    height: 20rem;
+    display: inline-block;
+    border-radius: 5rem;
+    box-shadow: 10px -10px 0 black;
+    position: relative;
+    z-index: -3;
+}
+
+.loket .loket-base .loket-kiri .loket-kiri-info {
+    position: absolute;
+    width: 12rem;
+    height: 4rem;
+    background-color: #ff8201;
+    top: -2rem;
+    right: 8rem;
+    border-radius: 4rem;
+    box-shadow: 5px 5px 0 black;
+    z-index: 99;
+}
+
+.loket .loket-base .loket-kiri .loket-kiri-info h1 {
+    font-size: 2rem;
+    text-align: center;
+    padding-top: 0.7rem;
+    font-weight: bold;
+    font-style: italic;
+    color: white;
+}
+
+.loket .loket-base .loket-kiri .loket-kiri-isi {
+    display: inline-block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.loket .loket-base .loket-kiri .loket-kiri-isi h1 {
+    font-size: 10rem;
+    color: white;
+    font-style: italic;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 3.5rem;
+}
+
+.loket-kiri-button {
+    display: inline-block;
+    margin-top: 2rem;
+    width: 12rem;
+    height: 3rem;
+    font-size: 1.5rem;
+    border-radius: 3rem;
+    margin-left: 8rem;
+    background-color: #bf01bd;
+    color: white;
+    border: none;
+    box-shadow: 4px 4px 0 black;
+    font-weight: bold;
+}
+
+.loket-kiri-button:hover {
+    background-color: #7e007e;
+}
+
+.loket .loket-base .loket-kanan {
+    width: 100%;
+    height: 100%;
+    border-radius: 5rem;
+    background-color: #7e007e;
+    box-shadow: 10px 10px 0 black;
+    position: relative;
+}
+
+.loket .loket-base .loket-kanan::after {
+    content: "";
+    width: 28rem;
+    height: 20rem;
+    display: inline-block;
+    border-radius: 5rem;
+    box-shadow: -10px -10px 0 #ff8201;
+    position: relative;
+    z-index: -3;
+}
+
+.loket .loket-base .loket-kanan .loket-kanan-info {
+    position: absolute;
+    width: 12rem;
+    height: 4rem;
+    background-color: #ff8201;
+    top: -2rem;
+    right: 8rem;
+    border-radius: 4rem;
+    box-shadow: 5px 5px 0 black;
+    z-index: 99;
+}
+
+.loket .loket-base .loket-kanan .loket-kanan-info h1 {
+    font-size: 2rem;
+    text-align: center;
+    padding-top: 0.7rem;
+    font-weight: bold;
+    font-style: italic;
+    color: white;
+}
+
+.loket .loket-base .loket-kanan .loket-kanan-isi {
+    display: inline-block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.loket .loket-base .loket-kanan .loket-kanan-isi h1 {
+    font-size: 10rem;
+    color: white;
+    font-style: italic;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 3.5rem;
+}
+
+.loket-kanan-button {
+    display: inline-block;
+    margin-top: 2rem;
+    width: 12rem;
+    height: 3rem;
+    font-size: 1.5rem;
+    border-radius: 3rem;
+    margin-left: 8rem;
+    background-color: #bf01bd;
+    color: white;
+    border: none;
+    box-shadow: 4px 4px 0 black;
+    font-weight: bold;
+}
+
+.loket-kanan-button:hover {
+    background-color: #7e007e;
+}
+
+.reset {
+    margin-top: 8rem;
+    text-align: center;
+}
+
+.reset button {
+    display: inline-block;
+    width: 10rem;
+    height: 2.5rem;
+    border-radius: 3rem;
+    background-color: #ff8201;
+    color: black;
+    border: none;
+    box-shadow: 4px 4px 0 black;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+.reset button:hover {
+    background-color: #ff6101;
+}
+
+.about {
+    position: relative;
+    top: 15%;
+    width: 75%;
+    height: 65%;
+    border: 25px solid;
+    border-image: linear-gradient(45deg, #ff8201, #7e007e) 1;
+    margin-left: 13rem;
+    box-sizing: border-box;
+}
+
+.about .about-content {
+    width: 100%;
+}
+
+.about .about-content img {
+    width: 11rem;
+    margin-left: 27rem;
+    margin-top: 1rem;
+    padding: 1rem 1rem;
+    border: 3px solid #bf01bd;
+    border-radius: 1rem;
+}
+
+.about .about-content h5 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 1.5rem;
+    font-weight: bolder;
+    font-size: 1.5rem;
+}
+
+.about .about-content p {
+    margin-top: -1rem;
+    font-weight: bold;
+}
+
+.about-create {
+    padding-left: 1rem;
+    box-sizing: border-box;
+    margin-left: 1rem;
+}
+
+.about-nama {
+    width: 15rem;
+}
