--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,7 +5,9 @@
     padding: 0px;
     font-family: COCOGOOSE, sans-serif;
     box-sizing: border-box;
+
 }
+
 
 body {
     background-image: url("{{asset('assets/img/BG_LOGIN.jpg')}}");
@@ -16,7 +18,7 @@ body {
 }
 
 .logo-loket {
-    border: 1px solid #6f1ab6;
+    border: 1px solid #6F1AB6;
     border-radius: 10px;
 }
 
@@ -36,7 +38,7 @@ body {
 
 .card-radius {
     border-radius: 30px;
-    background-color: #6f1ab6;
+    background-color: #6F1AB6;
     align-content: center;
 }
 
@@ -51,6 +53,7 @@ label {
 
 .button-input {
     text-align: center;
+
 }
 
 .btn {
@@ -58,27 +61,66 @@ label {
     border-radius: 30px;
 }
 
+
+.navbar {
+    background-color: white;
+}
+
+
+
+
+.navbar-collapse {
+    display: block;
+    background-color: rgb(240, 169, 15);
+    padding: 20px 10px;
+    height: 100%;
+    width: 100%;
+    margin-top: -15px;
+    margin-right: -15px;
+    margin-left: -200px;
+    border-radius: 20px;
+}
+
+.nav-item {
+    padding-left: 50px;
+    padding-right: 50px;
+    border-right: black solid 3px;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+}
+
+
+.nav-link {
+    color: rgb(0, 0, 0);
+}
+
+
 .container-besar {
-    width: 1500px;
-    height: 700px;
+    width: 99%;
+    height: 500px;
     overflow: hidden;
+    background-image: url('public/assets/img/BG_LOGIN.png');
 }
 
 .loket {
-    margin-top: 6rem;
+    margin-top: 3rem;
 }
 
-.background-1 img {
-    width: 85%;
-    height: 85%;
+.background-1 {
+    width: 100%;
+    height: 100%px;
     position: absolute;
     z-index: -20;
     bottom: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .background-2 img {
     width: 25rem;
     position: absolute;
+
     bottom: 3rem;
     right: 3rem;
     z-index: -19;
